test/errors/e32.gm
Proc foo(G1,G2:Graph)
{
    Node(G1) s;
    Node(G2) t;
    Foreach (r: s.CommonNbrs(t))
    {

    }

} 
